Fix 2D canvas flashing black

When CanvasResource was refactored by this CL:
https://chromium.googlesource.com/chromium/src/+/2e4a432454ac3f04d6c5fa8f17c49ce3026217d6
We when from using SkImage to using StaticBitmapImage.  For tracking
texture resources. StaticBitmapImage benefits from a mailbox caching
mechanism implemented in GraphicsContext3DUtils, so when the underlying
GrTexture object is recycled, GraphicsContext3DUtils retrieves the
old mailbox name from its cache.  When CanvasResource was transition
to use StaticBitmapImage we needed to stop disassociating mailbox names
during tear down because it invalidate the mailboxes cached by
GraphicsContext3DUtils.

The test that verifies that mailbox names are not leaked was modified
to expect mailbox disassociation to be triggered by GrTexture
destruction rather than CanvasResource destruction.

BUG=796838

Change-Id: Idff59a57a5acee08a7b7573e3b34593aa1938fa5