third_party/WebKit/Source/platform/graphics/CanvasResource.cpp
@@ -128,13 +128,9 @@ bool CanvasResource_Bitmap::IsValid() const {
 
 void CanvasResource_Bitmap::TearDown() {
   WaitSyncTokenBeforeRelease();
-  auto gl = ContextGL();
-  if (gl && HasGpuMailbox()) {
-    DCHECK(image_->IsTextureBacked());
-    // To avoid leaking Mailbox records, we must disassociate the mailbox
-    // before image_ goes out of scope because skia might recycle the texture.
-    gl->ProduceTextureDirectCHROMIUM(0, GetOrCreateGpuMailbox().name);
-  }
+  // The we must not dissociate the mailbox from the texture object here because
+  // The texture is recycled by skia and thae associated cached mailbox is
+  // stored by GraphicsContext3DUtils.cpp
   image_ = nullptr;
 }
 
